deployment/integrations/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sonarqube
spec:
  hosts:
  - "sonarqube.dev.dsop.io"
  gateways:
  - istio-ingressgateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: sonarqube.sonarqube.svc.cluster.local
        port:
          number: 9000
